--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ buildscript {
 dependencies {
     testCompile 'junit:junit:4.11'
     compile 'com.google.code.gson:gson:2.2.4'
+    compile 'com.google.guava:guava:+'
 // https://mvnrepository.com/artifact/org.projectlombok/lombok
     compile group: 'org.projectlombok', name: 'lombok', version: '1.16.10'
 
